feat: fix: port: - Added 2 new commands - started refactoring notifications - started implementing new EntityListDisplay feature - started adding translations - updated some features to work on new versions - added more functionality to InGameStats