@@ -5,8 +5,9 @@ import dev.bebomny.beaver.beaverutils.features.SimpleOnOffFeature;
 import net.fabricmc.fabric.api.client.event.lifecycle.v1.ClientTickEvents;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.util.math.MatrixStack;
+import net.minecraft.text.MutableText;
 import net.minecraft.text.Text;
+import net.minecraft.util.Formatting;
 import net.minecraft.util.math.Vec3d;
 
 import java.util.ArrayList;
@@ -14,16 +15,26 @@ import java.util.List;
 
 public class InGameStats extends SimpleOnOffFeature {
 
+    private static final int SPACING = 5;
     private final InGameStatsConfig inGameStatsConfig = config.inGameStatsConfig;
+    //Player speed
     private final List<Double> distanceBuffer = new ArrayList<>();
     private float playerSpeed;
     private Vec3d prevPos;
+
+    //TPS
+    private float ticksPerSec;
+    private float msPerTick;
 
     public InGameStats() {
         super("InGameStats");
 
         this.playerSpeed = 0.0f;
         this.prevPos = new Vec3d(0, 0, 0);
+
+        this.ticksPerSec = 0.0f;
+        this.msPerTick = 0.0f;
+
         setEnableConfig(inGameStatsConfig);
 
 //        if(config.generalConfig.autoEnable)
@@ -33,37 +44,129 @@ public class InGameStats extends SimpleOnOffFeature {
     }
 
     private void onUpdate(MinecraftClient client) {
+        //Redo speed calculation
         if (client.player == null)
             return;
 
-        if(distanceBuffer.size() >= inGameStatsConfig.bufferSize)
-            distanceBuffer.remove(0);
+        if (distanceBuffer.size() >= inGameStatsConfig.bufferSize)
+            distanceBuffer.removeFirst();
 
-        if(distanceBuffer.size() < inGameStatsConfig.bufferSize) {
+        if (distanceBuffer.size() < inGameStatsConfig.bufferSize) {
             double distance = client.player.getPos().distanceTo(prevPos); //idk  if i can use this // It seems i cant lolz //using direct distance now
             distanceBuffer.add(distance);
         }
 
-        float completeDistance = 0;
+        float completeDistance = .0f;
 
-        for (Double d : distanceBuffer)
-            completeDistance += d;
+        for (double d : distanceBuffer)
+            completeDistance += (float) d;
 
 
-        playerSpeed = completeDistance / distanceBuffer.size() * distanceBuffer.size();
+        playerSpeed = completeDistance;
 
         prevPos = client.player.getPos();
+        //End of speed calculation
+
+        //TODO Add a command for this too
+        //client.player.getWorld().getTickManager().getTickRate()
+        //ticksPerSec = client.player.getWorld().getTickManager().getTickRate();
+        //msPerTick = client.player.getWorld().getTickManager().getMillisPerTick();
+        if (client.player.getServer() == null) {
+            ticksPerSec = client.player.getWorld().getTickManager().getTickRate();
+            msPerTick = client.player.getWorld().getTickManager().getMillisPerTick();
+        } else {
+            ticksPerSec = client.player.getServer().getTickManager().getTickRate();
+            msPerTick = client.player.getServer().getAverageTickTime();
+        }
     }
 
 
     public void onRenderInit(DrawContext context, float tickDelta) {
-        if(!isEnabled())
+        if (!isEnabled())
             return;
-        //TODO: Fix here
+        //TODO: Add color formatting
+        // Anchored spacing
+
+        MutableText playerSpeedText = Text
+                .literal(String.format("%.2f", playerSpeed))
+                .formatted(Formatting.GREEN)
+                .append(Text
+                        .literal(" m/s")
+                        .formatted(Formatting.BLUE));
+
         context.drawTextWithShadow(
                 client.textRenderer,
-                Text.of(String.format("%.3g", playerSpeed) + " m/s"),
-                (int) (client.getWindow().getScaledWidth()/2.0f + 100.0f),
+                playerSpeedText,
+                (int) (client.getWindow().getScaledWidth() / 2.0f + 100.0f),
+                (int) (client.getWindow().getScaledHeight() - 14.0f),
+                0xFFFFFF0F
+        );
+
+
+        /*
+        Ticks
+            20 - 17 -> Green
+            16.9 - 12 -> Yellow
+            11.9 - 0 -> Red
+         */
+        Formatting tpsFormatting;
+        if (ticksPerSec >= 17f)
+            tpsFormatting = Formatting.GREEN;
+        else if (ticksPerSec >= 12f)
+            tpsFormatting = Formatting.YELLOW;
+        else
+            tpsFormatting = Formatting.RED;
+
+        //TODO: Add as translatable? for ex: "%.1f TPS"
+        MutableText tpsText = Text
+                .literal(String.format("%.1f", ticksPerSec))
+                .formatted(tpsFormatting)
+                .append(Text
+                        .literal(" TPS")
+                        .formatted(Formatting.BLUE));
+
+        //Wide number for anchoring the following stats -> TPS and msPerTick
+        MutableText widePlayerSpeed = Text.literal("888 m/s");
+        int previousTextLength = Math.max(client.textRenderer.getWidth(playerSpeedText), client.textRenderer.getWidth(widePlayerSpeed));
+
+        context.drawTextWithShadow(
+                client.textRenderer,
+                tpsText,
+                (int) (client.getWindow().getScaledWidth() / 2.0f + 100.0f + SPACING + previousTextLength),
+                client.getWindow().getScaledHeight() - 14,
+                0xFFFFFF0F
+        );
+
+        /*
+        ms per tick
+        one tick -> 50ms - baseline
+            50 - 58.8ms -> Green
+            58.9 - 83.3 -> Yellow
+            83.4 - Integer.MAX_VALUE -> Red
+         */
+
+        Formatting msPerTickFormatting;
+        if (msPerTick <= 58.8f)
+            msPerTickFormatting = Formatting.GREEN;
+        else if (msPerTick <= 83.3f)
+            msPerTickFormatting = Formatting.YELLOW;
+        else
+            msPerTickFormatting = Formatting.RED;
+
+        MutableText msPerTickText = Text
+                .literal(String.format("%.2f", msPerTick))
+                .formatted(msPerTickFormatting)
+                .append(Text
+                        .literal(" ms/tick")
+                        .formatted(Formatting.BLUE));
+
+
+        previousTextLength += SPACING; //spacing
+        previousTextLength += client.textRenderer.getWidth(tpsText);
+        context.drawTextWithShadow(
+                client.textRenderer,
+                msPerTickText,
+                (int) (client.getWindow().getScaledWidth() / 2.0f + 100.0f + SPACING + previousTextLength),
                 (int) (client.getWindow().getScaledHeight() - 14.0f),
                 0xFFFFFF0F
         );
